<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
   >

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.housesigma.ui.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />


    <fragment
        android:id="@+id/navigation_list"
        android:name="com.housesigma.ui.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.housesigma.ui.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_web"
        android:name="com.housesigma.ui.WebFragment"
        android:label="@string/title_web"
        tools:layout="@layout/fragment_web" />


</navigation>

